# Lab3_gr3

./: CMakeCache.txt  CMakeLists.txt  Makefile  PROM_M_Método_de_raices.ipynb  README.md  cmake_install.cmake  doxygen_doc.conf
doc/html/: CMakeCCompilerId_8c.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp.html  CMakeCXXCompilerId_8cpp_source.html  README_8md.html  README_8md_source.html  annotated.html  classes.html  classparticipante-members.html  classparticipante.html  config__tty_8cpp.html  config__tty_8cpp_8o_8d.html  config__tty_8cpp_8o_8d_source.html  config__tty_8cpp_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_144915d84b53722b7310696fccb69061.html  dir_446fa3779613ae65430f5581e4f4637e.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7b6a6a8d016e61851534849ba32b4bd8.html  dir_a7ad92605c0732c583ab23ed7e226220.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_fc3585672ab216dce61cc7fcba5c4947.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  lib__grupo3_8h.html  lib__grupo3_8h_source.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp_8o_8d_source.html  main_8cpp_source.html  md_README.html  menudata.js  pages.html  participant_8cpp.html  (+5 more)
doc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  annotated.tex  classparticipante.tex  config__tty_8cpp.tex  config__tty_8cpp_8o_8d.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  files.tex  main_8cpp.tex  (+17 more)
include/: lib_grupo3.h  tty_lib2.h
src/: config_tty.cpp  main.cpp  participant.cpp
(+24 files in other folders)
